final footer link  contrast issues and testimonial responsiveness

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -85,7 +85,7 @@ select,
 textarea{font-family:inherit;font-size:inherit;line-height:inherit;}
 a{color:#337ab7;text-decoration:none;}
 a:hover,
-a:focus{color:#23527c;text-decoration:underline;}
+a:focus{color:#84B3DC;text-decoration:underline;}
 a:focus{outline:5px auto -webkit-focus-ring-color;outline-offset:-2px;}
 figure{margin:0;}
 img{vertical-align:middle;}
